--- a/src/main/webapp/css/auth-style.css
+++ b/src/main/webapp/css/auth-style.css
@@ -147,7 +147,7 @@ label{
     gap: 4px;
 }
 .docs-msg::before{
-    content: url('../assets/alert-circle.svg');
+    content: url('img/icons/alert-circle.svg');
     display: inline-block;
 }
 
